--- a/provisioners/ansible/playbook.yaml
+++ b/provisioners/ansible/playbook.yaml
@@ -23,8 +23,8 @@
       tags: 'lsyncd'
     - import_tasks: 'tasks/docker.yaml'
       tags: 'docker'
-    - import_tasks: 'tasks/test_repos.yaml'
-      tags: 'test_fwk'
+    - import_tasks: 'tasks/repos.yaml'
+      tags: 'repos'
     - import_tasks: 'tasks/ansible_extras.yaml'
       tags: 'ansible_extras'
     - import_tasks: 'tasks/tshark.yaml'
