--- a/provisioners/ansible/vars/pip.yaml
+++ b/provisioners/ansible/vars/pip.yaml
@@ -4,14 +4,10 @@ pip_executable: 'pip'
 
 pip_conf:
   global:
-    index_url: 'https://pypi.cloud.nsn-rdnet.net/root/pypi/+simple/'
+    index_url: 'https://pypi.python.org/simple'
     extra_index_url:
-      - 'https://pypi.dynamic.nsn-net.net/root/pypi/+simple/'
-      - 'https://pypi.dynamic.nsn-net.net/crl/prod/+simple/'
       - 'https://pypi.python.org/simple'
     trusted_host:
-      - 'pypi.dynamic.nsn-net.net'
-      - 'pypi.cloud.nsn-rdnet.net'
       - 'pypi.python.org'
     timeout: 3
     retries: 1
@@ -19,5 +15,5 @@ pip_conf:
     disable_pip_version_check: true
     verbose: 0
   search:
-    index: 'https://pypi.cloud.nsn-rdnet.net/crl/prod/'
+    index: 'https://pypi.python.org/simple'
 ...
