Add dependabot for dependency management
- Add requirements.d directory for dependencies
- Update tox.ini with each requirement file
- Add dependabot.yml to support configuration

--- a/tox.ini
+++ b/tox.ini
@@ -21,13 +21,7 @@ passenv =
 sitepackages = False
 whitelist_externals =
     find
-deps =
-    shellcheck-py==0.7.1.1
-    yamllint==1.26.0
-    mkdocs==1.1.2
-    ansible-lint[community]==5.3.2
-    pymdown-extensions==8.1.1
-    Pygments==2.8.0
+deps = -r requirements.d/testenv.txt
 parallel_show_output = true
 commands =
     - find . -type f -name "*.pyc" -delete
@@ -37,29 +31,21 @@ commands =
 
 [testenv:linters]
 description = Execute all project linters
-deps =
-    pre-commit==2.8.2
-    yamllint==1.26.0
-    shellcheck-py==0.7.1.1
-    ansible-lint[community]==5.3.2
-    mkdocs==1.1.2
-    pymdown-extensions==8.1.1
+deps = -r requirements.d/linters.txt
 commands =
     {envpython} -m pre_commit run {posargs:--all-files --verbose}
 
 
 [testenv:vagrantlint]
 description = Vagrantfile linter
-deps =
-    pre-commit==2.8.2
+deps = -r requirements.d/vagrantlint.txt
 commands =
     {envpython} -m pre_commit run --hook-stage manual vagrantlint
 
 
 [testenv:rubocoplint]
 description = Ruby linter
-deps =
-    pre-commit==2.8.2
+deps = -r requirements.d/rubocoplint.txt
 commands =
     {envpython} -m pre_commit run --all-files \
         --hook-stage manual rubocoplint
@@ -67,10 +53,7 @@ commands =
 
 [testenv:docs]
 description = Project documentation
-deps =
-    mkdocs==1.1.2
-    pymdown-extensions==8.1.1
-    Pygments==2.8.0
+deps = -r requirements.d/docs.txt
 commands =
     {envpython} -m mkdocs serve {posargs}
 
