Update ansible-lint[community] dependabot
- Update dependabot.yml for ansible-lint[community]
  - Ignore up to > 5.4.0 due to --parsaeble-severity deprecation

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,9 @@ updates:
       - 'dependabot'
     ignore:
       - dependency-name: 'shellcheck'
+      - dependency-name: 'ansible-lint[community]'
+        versions:
+          - '>5.4.0'
   - package-ecosystem: 'bundler'
     directory: '/'
     schedule:
