--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
   execute_tests:
     docker:
       - image: cimg/python:3.8
+    resource_class: medium
     steps:
       - 'checkout'
       - python/install-packages:
