--- a/provisioners/ansible/vars/tshark.yaml
+++ b/provisioners/ansible/vars/tshark.yaml
@@ -3,7 +3,7 @@
 tshark_workspace: '/ws'
 tshark_version: '3.4.2'
 tshark_source: 'wireshark-org-master-ba-3.4.tar.gz'
-tshark_build_dir: '/opt/wireshark_e2e'
+tshark_build_dir: '/opt/wireshark'
 tshark_reinstall_from_source: false
 tshark_group: 'wireshark'
 
@@ -22,22 +22,22 @@ tshark_v2_dependencies:
   - 'libcap2-bin'
 
 tshark_v2_build_cmd: |
-      ./autogen.sh && ./configure --prefix='{{ tshark_build_dir }}' \
-      --enable-tshark \
-      --with-krb5=no \
-      --with-portaudio=no \
-      --with-gnutls=no \
-      --with-gcrypt=no \
-      --enable-capinfos=no \
-      --enable-dumpcap=yes \
-      --enable-mergecap=yes \
-      --enable-editcap=no \
-      --disable-idl2wrs \
-      --disable-randpkt \
-      --enable-text2pcap=no \
-      --enable-androiddump=no \
-      --disable-wireshark \
-      --disable-warnings-as-errors
+  ./autogen.sh && ./configure --prefix='{{ tshark_build_dir }}' \
+  --enable-tshark \
+  --with-krb5=no \
+  --with-portaudio=no \
+  --with-gnutls=no \
+  --with-gcrypt=no \
+  --enable-capinfos=no \
+  --enable-dumpcap=yes \
+  --enable-mergecap=yes \
+  --enable-editcap=no \
+  --disable-idl2wrs \
+  --disable-randpkt \
+  --enable-text2pcap=no \
+  --enable-androiddump=no \
+  --disable-wireshark \
+  --disable-warnings-as-errors
 
 tshark_v3_dependencies:
   - 'flex'
@@ -51,5 +51,6 @@ tshark_v3_dependencies:
   - 'libnghttp2-dev'
   - 'libcap2-bin'
 
-tshark_v3_build_cmd: 'cmake -DCMAKE_INSTALL_PREFIX="{{ tshark_build_dir }}/" -DBUILD_wireshark=OFF'
+tshark_v3_build_cmd: |
+  cmake -DCMAKE_INSTALL_PREFIX="{{ tshark_build_dir }}/" -DBUILD_wireshark=OFF
 ...
