Update dependabot.yml, python version compatibility
- Pinned shellcheck to version 0.8.0.3
- Pinned pymdown-extensions to version 9.1

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,10 @@ updates:
       - 'dependabot'
     ignore:
       - dependency-name: 'shellcheck'
+          - '==0.8.0.3'
+      - dependency-name: 'pymdown-extensions'
+        versions:
+          - '==9.1'
       - dependency-name: 'ansible-lint[community]'
         versions:
           - '>5.4.0'
