--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,7 @@ updates:
       - 'dependabot'
     ignore:
       - dependency-name: 'shellcheck'
+        versions:
           - '==0.8.0.3'
       - dependency-name: 'pymdown-extensions'
         versions:
