--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,10 @@ setenv =
     PIP_CONFIG_FILE = .pip.conf
 passenv =
     USERPROFILE
+    USER
     HOME
+    PRE_COMMIT_HOME
+    TERM
 sitepackages = False
 whitelist_externals =
     find
@@ -34,21 +37,6 @@ description = Execute all project linters
 deps = -r requirements.d/linters.txt
 commands =
     {envpython} -m pre_commit run {posargs:--all-files --verbose}
-
-
-[testenv:vagrantlint]
-description = Vagrantfile linter
-deps = -r requirements.d/vagrantlint.txt
-commands =
-    {envpython} -m pre_commit run --hook-stage manual vagrantlint
-
-
-[testenv:rubocoplint]
-description = Ruby linter
-deps = -r requirements.d/rubocoplint.txt
-commands =
-    {envpython} -m pre_commit run --all-files \
-        --hook-stage manual rubocoplint
 
 
 [testenv:docs]
