Update ansible provisioner, rubocop linter
- Add conditional statement in rubocop linter
  - Fail script if bundle binary is missing
- Update system.yaml ansible task file
  - Add setup for inotify filewatchers

--- a/provisioners/ansible/tasks/system.yaml
+++ b/provisioners/ansible/tasks/system.yaml
@@ -75,4 +75,12 @@
     force_apt_get: 'yes'
     install_recommends: 'no'
   become: 'yes'
+
+- name: 'Increase filewatcher capability'
+  sysctl:
+    name: 'fs.inotify.max_user_watches'
+    value: '{{ system_inotify_filewatchers }}'
+    reload: 'yes'
+    state: 'present'
+  become: 'yes'
 ...
