Update dockerfile, add echo to stderr for rubocop
- Update Dockerfile
  - Change default CMD instruction to ["tox"]
  - Delete xterm env variable
- Update rubocop
  - Add echo to stderr >&2
- Update circleci config.yml
  - Update image to tag 0.0.2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   execute_tests:
     docker:
-      - image: 'theodore86/vagrantenv-ci:0.0.1'
+      - image: 'theodore86/vagrantenv-ci:0.0.2'
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
@@ -12,8 +12,7 @@ jobs:
       - 'checkout'
       - run:
           name: 'Run continuous integration tests'
-          command: |
-            tox -e linters
+          command: 'tox'
 workflows:
   on_commit:
     jobs:
