Update Dockerfile, project documentation
- Update CI Dockerfile
  - Add non-root user for CI execution
- Update project documentation
- Update circleci config.yml with new container image
- Update tox.ini
  - Delete PRE_COMMIT_HOME
  - Add BUNDLE_HOME

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ passenv =
     USERPROFILE
     USER
     HOME
-    PRE_COMMIT_HOME
+    BUNDLE_PATH
     TERM
 sitepackages = False
 whitelist_externals =
