Add hadolint (linter) - ansible provisioner
- Update playbook.yaml
  - Include hadolint task file and tag
- Update vagrant.yaml
  - Add hadolin tag
- Add hadolint lint task and vars files
- Update handlers.yaml
  - Add hadolint handlers

--- a/provisioners/ansible/playbook.yaml
+++ b/provisioners/ansible/playbook.yaml
@@ -41,6 +41,8 @@
       tags: 'kind'
     - import_tasks: 'tasks/kubectl.yaml'
       tags: 'kubectl'
+    - import_tasks: 'tasks/hadolint.yaml'
+      tags: 'hadolint'
   handlers:
     - import_tasks: 'handlers.yaml'
 ...
