--- a/provisioners/ansible/handlers.yaml
+++ b/provisioners/ansible/handlers.yaml
@@ -72,4 +72,22 @@
       - 'kubectl_installed_version == kubectl_version'
     fail_msg: 'Kubectl installation failed, {{ kubectl_version }} != {{ kubectl_installed_version }}'
     success_msg: 'Installed Kubectl version is: {{ kubectl_version }}'
+
+- name: 'Hadolint | Check installed binary version'
+  shell: '{{ hadolint_install_dir }}/hadolint --version'
+  changed_when: false
+  register: 'hadolint_installed_version'
+
+- name: 'Hadolint | Set installed binary version'
+  set_fact:
+    hadolint_existing_version: '{{ hadolint_installed_version | regex_search(version_re) }}'
+  vars:
+    version_re: '(:?\d{1,}\.){2}\d{1,}'
+
+- name: 'Hadolint | Verify installed binary version'
+  assert:
+    that:
+      - 'hadolint_existing_version == hadolint_version'
+    fail_msg: 'Hadolint installation failed, {{ hadolint_version }} != {{ hadolint_existing_version }}'
+    success_msg: 'Installed Hadolint version is: {{ hadolint_version }}'
 ...
