--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -184,4 +184,5 @@
                     - 'go'
                     - 'kind'
                     - 'kubectl'
+                    - 'hadolint'
 ...
