--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,12 @@ setenv =
     VIRTUALENV_NO_DOWNLOAD = 1
     PIP_CONFIG_FILE = .pip.conf
 passenv =
-    USERPROFILE
     USER
     HOME
-    BUNDLE_PATH
     TERM
+    BUNDLE_PATH
+    SKIP
+    PRE_COMMIT_HOME
 sitepackages = False
 whitelist_externals =
     find
