Update docker linter wrapper
- Update docker/lint.sh
  - Add support of darwin OS for linting
- Update system.sh helpers
  - Add get_ostype function
- Update .gitignore
  - Add to ignore ruby files, folders
- Update .rubocop.yml
  - Add to exlude extra folders

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,9 @@ AllCops:
     - provisioners/**/*
     - site/**/*
     - .vagrant/**/*
+    - .vagrant.d/**/*
+    - ruby/**/*
+    - .bundle/**/*
 
 Style/FrozenStringLiteralComment:
   Enabled: false
