--- a/provisioners/ansible/playbook.yaml
+++ b/provisioners/ansible/playbook.yaml
@@ -43,6 +43,8 @@
       tags: 'kubectl'
     - import_tasks: 'tasks/hadolint.yaml'
       tags: 'hadolint'
+    - import_tasks: 'tasks/helm.yaml'
+      tags: 'helm'
   handlers:
     - import_tasks: 'handlers.yaml'
 ...
