Add OpenJDK, Groovy ansible provisioners
- Update playbook
  - Add groovy tag
- Fix kind, helm taks files
  - Fix regexp in kind version
  - FIx when conditional statement in helm
- Add openJDK task and variable file
- Add groovy 4.0.1 task and variable file
- Add jinja2 templates
  - Add groovy_home and java_home templates

--- a/provisioners/ansible/playbook.yaml
+++ b/provisioners/ansible/playbook.yaml
@@ -45,6 +45,8 @@
       tags: 'hadolint'
     - import_tasks: 'tasks/helm.yaml'
       tags: 'helm'
+    - import_tasks: 'tasks/groovy.yaml'
+      tags: 'groovy'
   handlers:
     - import_tasks: 'handlers.yaml'
 ...
