--- a/provisioners/ansible/handlers.yaml
+++ b/provisioners/ansible/handlers.yaml
@@ -44,7 +44,7 @@
   set_fact:
     kind_installed_version: '{{ kind_check_installed_version | default("") | regex_search(version_re) }}'
   vars:
-    version_re: '(:?\d{1,}\.){2}\d{1,}'
+    version_re: '(?:\d{1,}\.){2}\d{1,}'
 
 - name: 'KIND | Verify installed binary version'
   assert:
@@ -82,12 +82,30 @@
   set_fact:
     hadolint_existing_version: '{{ hadolint_installed_version | regex_search(version_re) }}'
   vars:
-    version_re: '(:?\d{1,}\.){2}\d{1,}'
+    version_re: '(?:\d{1,}\.){2}\d{1,}'
 
 - name: 'Hadolint | Verify installed binary version'
   assert:
     that:
       - 'hadolint_existing_version == hadolint_version'
     fail_msg: 'Hadolint installation failed, {{ hadolint_version }} != {{ hadolint_existing_version }}'
-    success_msg: 'Installed Hadolint version is: {{ hadolint_version }}'
+    success_msg: 'Installed Hadolint with version: {{ hadolint_version }}'
+
+- name: 'Groovy | Check installed version'
+  command: 'groovy --version'
+  changed_when: false
+  register: 'groovy_installed_version'
+
+- name: 'Groovy | Set installed version'
+  set_fact:
+    groovy_existing_version: '{{ groovy_installed_version.stdout | regex_search(version_re, "\1") | first }}'
+  vars:
+    version_re: '^Groovy Version: ((?:\d{1,}\.){2}\d{1,})'
+
+- name: 'Groovy | Verify installed version'
+  assert:
+    that:
+      - 'groovy_existing_version == groovy_version'
+    fail_msg: 'Groovy installation failed, {{ groovy_version }} != {{ groovy_existing_version }}'
+    success_msg: 'Installed Groovy with version: {{ groovy_version }}'
 ...
