Update ansible GO provisioner
- Add variable for actionlint (Github action linter)

--- a/provisioners/ansible/roles/go/defaults/main.yml
+++ b/provisioners/ansible/roles/go/defaults/main.yml
@@ -8,4 +8,6 @@ go_modules:
     version: 'v0.2.26'
   - name: 'golang.org/x/lint/golint'
     version: 'latest'
+  - name: 'github.com/rhysd/actionlint/cmd/actionlint'
+    version: 'v1.6.12'
 ...
