Update Dockerfile (ruby part)
- Update Dockerfile
  - Move bundler installation earlier in provisioning
  - Add BUNDLER_BIN in system PATH
  - Update circleci configuration
    - Update symantic version of Dockerfile to 0.0.5
  - Update tox.ini
    - Add DEBUG variable in [passenv] section

--- a/tox.ini
+++ b/tox.ini
@@ -20,9 +20,10 @@ passenv =
     HOME
     TERM
     BUNDLE_PATH
-    SKIP
     PRE_COMMIT_HOME
     VAGRANT_HOME
+    SKIP
+    DEBUG
 sitepackages = False
 whitelist_externals =
     find
