Update Dockerfile to the latest ubuntu (Jellyfish)
- Update ubuntu version to 22.04
- Update circleci image tag to latest
- Add bash script to automate the docker image build process

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   execute_tests:
     docker:
-      - image: 'theodore86/vagrantenv-ci:0.0.5'
+      - image: 'theodore86/vagrantenv-ci:latest'
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
@@ -11,10 +11,10 @@ jobs:
     steps:
       - 'checkout'
       - run:
-          name: 'Run continuous integration tests'
+          name: 'Run Continuous Integration tests'
           command: 'tox'
 workflows:
-  on_commit:
+  on_pull_request:
     jobs:
       - execute_tests:
           context: 'docker-hub-creds'
