--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: 'Run Continuous Integration tests'
           command: 'tox'
 workflows:
-  on_pull_request:
+  on_commit:
     jobs:
       - execute_tests:
           context: 'docker-hub-creds'
