Add kubefwd ansible role
- Update ansible roles
  - Add support of kubefwd tool in version 1.22.2
- Update project documentation
- Add custom ansible jinja2 filters to support kubefwd role
- Add unit tests for the custom ansible jinja2 filters
- Update .gitattributes
  - Add .pylintrc
- Add pylint linter in .pre-commit-config.yaml
  - Add .pylintrc configuration file
- Update requirements.d/lint.txt
  - Add pylint version 2.13.8

--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@
 .gitignore text
 .dockerignore text
 .yamllint text eof=lf
+.pylintrc text eof=lf
 .ansible-lint text eof=lf
 Vagrantfile text diff=ruby
 .mailmap text
