--- a/provisioners/ansible/roles/docker/defaults/main.yml
+++ b/provisioners/ansible/roles/docker/defaults/main.yml
@@ -8,6 +8,8 @@ docker_config:
   dns: '{{ docker_dns_servers }}'
   insecure-registries: '{{ docker_insecure_registries }}'
   registry-mirrors: '{{ docker_registries_mirror }}'
+  features:
+    buildkit: true
 docker_sdk_install: true
 docker_sdk_version: '4.4.4'
 docker_sdk_container_name: 'hello-world'
