Update ansible go role
- Add support of gosh v0.2.3 and goimports v0.1.10

--- a/provisioners/ansible/roles/go/defaults/main.yml
+++ b/provisioners/ansible/roles/go/defaults/main.yml
@@ -10,4 +10,8 @@ go_modules:
     version: 'latest'
   - name: 'github.com/rhysd/actionlint/cmd/actionlint'
     version: 'v1.6.12'
+  - name: 'golang.org/x/tools/cmd/goimports'
+    version: 'v0.1.10'
+  - name: 'github.com/mkouhei/gosh'
+    version: 'v0.2.3'
 ...
