[skip-ci] Remove image tag format constrains from build.sh

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,10 @@ workflows:
     jobs:
       - execute_tests:
           context: 'docker-hub-creds'
+          filters:
+            branches:
+              ignore:
+                - 'main'
   nightly:
     triggers:
       - schedule:
