Add GH to automate the CI docker image creation
- Add GH dockerize.yml under .github/workflows
- Update build.sh, remove constrain for image tag
- Update circleCI, set CI only for PRs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,11 @@ workflows:
     jobs:
       - execute_tests:
           context: 'docker-hub-creds'
+          filters:
+            branches:
+              ignore:
+                - 'main'
+                - 'create-pull-request/patch'
   nightly:
     triggers:
       - schedule:
