--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'test-workflow'
     paths:
       - 'Dockerfile'
 
@@ -15,26 +16,33 @@ concurrency:
 jobs:
   update_ci_image:
     runs-on: ubuntu-22.04
+    env:
+      DOCKERHUB_REPO: 'theodore86/vagrantenv-ci'
     steps:
-      - name: Checkout SCM
-        uses: actions/checkout@v3
+      - name: 'Checkout SCM'
+        uses: 'actions/checkout@v3.0.2'
 
-      - name: Login to docker registry
-        uses: docker/login-action@v2.0.0
+      - name: 'Login to docker registry'
+        uses: 'docker/login-action@v2.0.0'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           logout: true
 
-      - name: Retrieve latest commit sha as image tag
+      - name: 'Retrieve latest commit sha as image tag'
         id: 'git_short_sha'
         run: |
           short_sha=$(git log -1 --format=%h)
           echo "::set-output name=short_sha::$short_sha"
 
+      - name: 'Setup yq processor'
+        uses: 'chrisdickinson/setup-yq@v1.0.1'
+
       - name: 'Update circleCI with the latest image tag'
         run: |
-          sudo sed -ri 's|(theodore86/vagrantenv-ci):(.*)|\1:${{ steps.git_short_sha.outputs.short_sha }}|' .circleci/config.yml
+          sudo yq -i \
+          '.jobs.execute_tests.docker[0].image = "${{ env.DOCKERHUB_REPO }}):${{ steps.git_short_sha.outputs.short_sha }}"' \
+          .circleci/config.yml
 
       - name: 'Build and push docker image'
         uses: 'docker/build-push-action@v3.0.0'
@@ -44,8 +52,8 @@ jobs:
           file: Dockerfile
           no-cache: true
           tags: |
-            theodore86/vagrantenv-ci:${{ steps.git_short_sha.outputs.short_sha }}
-            theodore86/vagrantenv-ci:latest
+            ${{ env.DOCKERHUB_REPO }}:${{ steps.git_short_sha.outputs.short_sha }}
+            ${{ env.DOCKERHUB_REPO }}:latest
 
       - name: 'Create PR for circleCI workflow having the latest image tag'
         uses: 'peter-evans/create-pull-request@v4'
