Implement ansible yq provisioning role
- Add yq ansible role
- Update ansible playbook.yml
  - Add yq role
- Update README.md
- Update vagrant provisioners.md
  - Add yq tool description

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -34,4 +34,5 @@
     - { role: 'vim', tags: 'vim' }
     - { role: 'repos', tags: 'repos' }
     - { role: 'fzf', tags: 'fzf' }
+    - { role: 'yq', tags: 'yq' }
 ...
