--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -17,7 +17,7 @@
     - :name: 'vagrant-proxyconf'
       :version: '2.0.10'
     - :name: 'vagrant-goodhosts'
-      :version: '1.1.3'
+      :version: '1.1.4'
     - :name: 'vagrant-netinfo'
       :version: '0.0.4'
 
@@ -63,7 +63,7 @@
             :mount_point: null
             :upload_path: null
         :no_remote: false
-        :no_install: false
+        :no_install: true
         :auto_update: true
         :auto_reboot: true
         :allow_downgrade: true
