Update ansible common system packages
- Add xdg-utils system package, required from external
  utilities to open a file or URL in the user's preferred
  application

--- a/provisioners/ansible/roles/common/system/defaults/main.yml
+++ b/provisioners/ansible/roles/common/system/defaults/main.yml
@@ -36,6 +36,7 @@ system_required_packages:
   - 'dos2unix'
   - 'socat'
   - 'bridge-utils'
+  - 'xdg-utils'
   - 'jq'
 system_inotify_filewatchers: '131072'
 ...
