Implement ansible terraform role
- Add role to configure terraform CLI
- Update playbook.yml with the respective role
- Update provisioners.md documentation

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -35,4 +35,5 @@
     - { role: 'repos', tags: 'repos' }
     - { role: 'fzf', tags: 'fzf' }
     - { role: 'yq', tags: 'yq' }
+    - { role: 'terraform', tags: 'terraform' }
 ...
