--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -21,6 +21,7 @@
     - { role: 'kubernetes/kubefwd', tags: 'kubefwd' }
     - { role: 'kubernetes/kubectx', tags: 'kubectx' }
     - { role: 'hashicorp/vagrant', tags: 'vagrant' }
+    - { role: 'hashicorp/terraform', tags: 'terraform' }
     - { role: 'hashicorp/vault', tags: 'hvault' }
     - { role: 'jvm/groovy', tags: 'groovy' }
     - { role: 'jvm/maven', tags: 'maven' }
@@ -35,5 +36,5 @@
     - { role: 'repos', tags: 'repos' }
     - { role: 'fzf', tags: 'fzf' }
     - { role: 'yq', tags: 'yq' }
-    - { role: 'terraform', tags: 'terraform' }
+    - { role: 'terragrunt', tags: 'terragrunt' }
 ...
