Add AWS CLI ansible role
- Update provisioners.md documentation
- Update playbook.yml, ad aws/cli role
- Add aws/cli role
- Update python/pip role
  - Update pip_executable variable to pip3
- Update python/tox  role
  - Update tox command execution to python3

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: 'TestVM (Vagrant) Ansible Provisioning'
+- name: 'Sandbox (Vagrant) Ansible Provisioning'
   hosts: 'all'
   connection: 'local'
   pre_tasks:
@@ -37,4 +37,5 @@
     - { role: 'fzf', tags: 'fzf' }
     - { role: 'yq', tags: 'yq' }
     - { role: 'terragrunt', tags: 'terragrunt' }
+    - { role: 'aws/cli', tags: 'aws' }
 ...
