Add AWS CLIv2 ansible role
- Update playbook.yml to include only awscliv2
- Change awscli to v1 and v2 subroles

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -37,5 +37,5 @@
     - { role: 'fzf', tags: 'fzf' }
     - { role: 'yq', tags: 'yq' }
     - { role: 'terragrunt', tags: 'terragrunt' }
-    - { role: 'aws/cli', tags: 'aws' }
+    - { role: 'aws/cli/v2', tags: 'aws' }
 ...
