--- a/provisioners/ansible/roles/aws/cli/v1/defaults/main.yml
+++ b/provisioners/ansible/roles/aws/cli/v1/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 awscli_package_name: 'awscli'
 awscli_package_version: '1.25.52'
-awscli_package_state: 'present'
+awscli_package_extra_args: '--user'
 ...
