--- a/provisioners/ansible/roles/aws/cli/v1/tasks/main.yml
+++ b/provisioners/ansible/roles/aws/cli/v1/tasks/main.yml
@@ -8,8 +8,8 @@
     name: '{{ awscli_package_name }}'
     version: '{{ awscli_package_version | default("omit") }}'
     chdir: ' {{ ansible_env.HOME }}'
-    extra_args: '--user'
-    state: '{{ awscli_package_state | default("present") }}'
+    extra_args: '{{ awscli_package_extra_args | default("omit") }}'
+    state: 'present'
     executable: '{{ pip_executable }}'
   environment:
     PIP_CONFIG_FILE: '{{ ansible_env.HOME }}/pip.conf'
