--- a/provisioners/ansible/ansible.cfg
+++ b/provisioners/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-interpreter_python = auto_legacy_silent
+interpreter_python = /usr/bin/python3
 log_path = /tmp/ansible.log
 remote_tmp = /tmp
 nocows = 1
