Fix ansible docker role
- Fix docker-compose version to stdout
  - Add python3 statement to import and print the version

--- a/provisioners/ansible/roles/docker/tasks/main.yml
+++ b/provisioners/ansible/roles/docker/tasks/main.yml
@@ -102,7 +102,7 @@
   when: 'docker_compose_install | bool'
 
 - name: 'Verify Docker Compose installation'
-  shell: 'docker-compose --version'
+  shell: 'python3 -c "import compose; print(compose.__version__)"'
   args:
     executable: '/bin/bash'
   changed_when: false
