Update ansible vagrant role
- Change ansible_machine to ansible_architecture variable

--- a/provisioners/ansible/roles/hashicorp/vagrant/vars/main.yml
+++ b/provisioners/ansible/roles/hashicorp/vagrant/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-vagrant_package: 'vagrant_{{ vagrant_version }}_{{ ansible_machine }}.deb'
+vagrant_package: 'vagrant_{{ vagrant_version }}_{{ ansible_architecture }}.deb'
 vagrant_download_url: 'https://releases.hashicorp.com/vagrant/{{ vagrant_version }}/{{ vagrant_package }}'
 vagrant_download_dest: '/tmp/{{ vagrant_package }}'
 ...
