Remove python27 support and upgrade ansible
- Update README.md
- Update .gitattributes
  - Add rubocop as shell script file
- Update Vagrantfile
  - Change the order of the vagrant provisioner execution,
    move file and shell provisioner prior to ansible_local
- Update project documentation
  - Update development guide
  - Fix minor documentation mistypos
- Update ansible.cfg
  - Update callback_enabled from callback_whitelist
- Update ansible roles
  - Update ruby role, add norc option in gem module explicitly
  - Update common system role, remove python27 system packages
- Update vagrant.yaml
  - Add shell provisioner for ansible bootstrapping
  - Update ansible_local provisioner, remove options related to ansible
    installation through ansible_local provisioner
- Add shell provisioner folder
  - Add ansible.sh shell script (bootstrapping ansible IaC tool)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 
-site_name: 'Vagrant TestVM Documentation'
+site_name: 'Vagrant Sandbox Documentation'
 site_author: 'Theodore Georgomanolis'
 site_description: 'Vagrant TestVM Project Documentation'
 site_url: 'https://github.com/theodore86/vagrantenv'
