--- a/provisioners/ansible/ansible.cfg
+++ b/provisioners/ansible/ansible.cfg
@@ -3,5 +3,5 @@ interpreter_python = /usr/bin/python3
 log_path = /tmp/ansible.log
 remote_tmp = /tmp
 nocows = 1
-callback_whitelist = profile_tasks
+callback_enabled = profile_tasks
 stdout_callback = debug
